--- a/package.json
+++ b/package.json
@@ -7,26 +7,34 @@
 	},
 	"author": "D.Toropin",
 	"license": "MIT",
+	"browserslist": [
+		"last 2 version",
+		"> 1%"
+	],
 	"devDependencies": {
-		"browser-sync": "^2.26.3",
-		"gulp": "^4.0.0",
-		"gulp-autoprefixer": "^6.0.0",
-		"gulp-csso": "^3.0.1",
+		"@babel/core": "^7.6.0",
+		"@babel/preset-env": "^7.6.0",
+		"browser-sync": "^2.26.7",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^7.0.0",
+		"gulp-babel": "^8.0.0",
+		"gulp-clean-css": "^4.2.0",
+		"gulp-concat": "^2.6.1",
 		"gulp-group-css-media-queries": "^1.2.2",
-		"gulp-imagemin": "^5.0.3",
-		"gulp-minify": "^3.1.0",
-		"gulp-notify": "^3.2.0",
-		"gulp-rename": "^1.4.0",
+		"gulp-image": "^5.1.0",
+		"gulp-imagemin": "^6.1.0",
 		"gulp-rigger": "^0.5.8",
+		"gulp-rm": "^2.0.0",
 		"gulp-sass": "^4.0.2",
-		"gulp-sourcemaps": "^2.6.4",
+		"gulp-sass-glob": "^1.1.0",
+		"gulp-sourcemaps": "^2.6.5",
 		"gulp-svg-sprite": "^1.5.0",
+		"gulp-uglify": "^3.0.2",
 		"gulp-watch": "^5.0.1",
-		"imagemin-pngquant": "^7.0.0",
-		"rimraf": "^2.6.3"
+		"node-sass": "^4.12.0"
 	},
 	"dependencies": {
-		"gulp-cli": "^2.0.1",
+		"jquery": "^3.4.1",
 		"normalize.css": "^8.0.1"
 	}
 }
