--- a/package.json
+++ b/package.json
@@ -29,12 +29,10 @@
 		"gulp-sass-glob": "^1.1.0",
 		"gulp-sourcemaps": "^2.6.5",
 		"gulp-svg-sprite": "^1.5.0",
+		"gulp-svgo": "^2.1.1",
 		"gulp-uglify": "^3.0.2",
 		"gulp-watch": "^5.0.1",
 		"node-sass": "^4.12.0"
 	},
-	"dependencies": {
-		"jquery": "^3.4.1",
-		"normalize.css": "^8.0.1"
-	}
+	"dependencies": {}
 }
